# ProjectTemplates

./: README
cpp/: .gitignore
cpp/qt5_widgets_exe/: .ycm_extra_conf.py  CMakeLists.txt
cpp/qt5_widgets_exe/src/: CMakeLists.txt  main.cpp  mainwindow.h
cpp/stl_exe/: CMakeLists.txt
cpp/stl_exe/src/: CMakeLists.txt  main.cpp
cpp/stl_exe_with_lib/: CMakeLists.txt
cpp/stl_exe_with_lib/exetest/: CMakeLists.txt  TestClassExe.cpp  TestClassExe.h  exetest_config.h  main.cpp
cpp/stl_exe_with_lib/libtest/: CMakeLists.txt  Doxyfile.in  LibClass.cpp  LibClass.h
